<?xml version="1.0"?>
<!--

   Licensed to the Apache Software Foundation (ASF) under one or more
   contributor license agreements.  See the NOTICE file distributed with
   this work for additional information regarding copyright ownership.
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-jcs</artifactId>
    <version>2.2.1</version>
    <relativePath>../pom.xml</relativePath>
  </parent>

  <artifactId>commons-jcs-core</artifactId>
  <version>2.2.1</version>
  <packaging>jar</packaging>

  <name>Apache Commons JCS :: Core</name>

  <scm>
    <connection>scm:svn:http://svn.apache.org/repos/asf/commons/proper/jcs/tags/commons-jcs-2.2.1-RC4/commons-jcs-core</connection>
    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/commons/proper/jcs/tags/commons-jcs-2.2.1-RC4/commons-jcs-core</developerConnection>
    <url>http://svn.apache.org/viewvc/commons/proper/jcs/tags/commons-jcs-2.2.1-RC4/commons-jcs-core</url>
  </scm>

  <properties>
    <maven.compiler.source>1.6</maven.compiler.source>
    <maven.compiler.target>1.6</maven.compiler.target>
  </properties>

  <dependencies>

    <!--  REQUIRED FOR JCS CORE -->
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
    </dependency>

    <!--  JDBC DISK CACHE -->
    <dependency>
      <groupId>commons-dbcp</groupId>
      <artifactId>commons-dbcp</artifactId>
      <optional>true</optional>
    </dependency>

    <!--  JDBC DISK CACHE -->
    <dependency>
      <groupId>hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <scope>test</scope>
    </dependency>

    <!--  For comparative performance tests only -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-collections4</artifactId>
      <scope>test</scope>
    </dependency>

    <!--  Test dependencies -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest-library</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <scope>test</scope>
    </dependency>

    <!-- Exclude for now -->
    <!-- dependency>
      <groupId>org.jgroups</groupId>
      <artifactId>jgroups</artifactId>
      <version>3.4.1.Final</version>
      <optional>true</optional>
    </dependency -->

    <dependency>
      <groupId>org.apache.velocity</groupId>
      <artifactId>velocity-tools</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>commons-httpclient</groupId>
      <artifactId>commons-httpclient</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <optional>true</optional>
    </dependency>
  </dependencies>

  <build>
    <testResources>
      <testResource>
        <directory>src/test/test-conf</directory>
        <includes>
          <include>**/*.properties</include>
          <include>**/*.ccf</include>
        </includes>
      </testResource>
    </testResources>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${commons.surefire.version}</version>
          <configuration>
            <argLine>-Xmx256m -Djava.security.manager -Djava.security.policy=${basedir}/src/test/conf/cache.policy</argLine>
            <forkCount>1</forkCount>
            <reuseForks>false</reuseForks>
            <includes>
              <include>**/*UnitTest.java</include>
            </includes>
            <excludes>
              <!--
                  Several of the test cases rely on background tasks that are timing
                  sensitive.
              -->
              <!-- You need to manually run these test cases. -->
              <exclude>**/BlockDiskElementDescriptorUnitTest.java</exclude>
              <exclude>**/HSQLDiskCacheConcurrentUnitTest.java</exclude>
              <exclude>**/HSQLDiskCacheUnitTest.java</exclude>
              <exclude>**/IndexedDiskCacheOptimizationUnitTest.java</exclude>
              <exclude>**/TestTCPLateralUnitTest.java</exclude>
              <exclude>**/UDPDiscoveryUnitTest.java</exclude>
              <!-- Causes hang in Continuum -->
              <exclude>**/UDPDiscoverySenderUnitTest.java</exclude>
            </excludes>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.rat</groupId>
          <artifactId>apache-rat-plugin</artifactId>
          <configuration>
            <excludes combine.children="append">
              <exclude>**/zipcodes.txt</exclude>
            </excludes>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>test-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
